add labeler class

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "2017-01-02 17:07:00  2365.50  2365.50  2364.50  2364.75     164"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "[4929 rows x 4 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "[4879 rows x 5 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -445,17 +445,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class labeler:\n",
+    "\n",
+    "    def __init__(self, data:pd.DataFrame, vol_thresholds:list, horizons:list, betas:list, periods:list):\n",
+    "        self.data = data\n",
+    "        self.vol_thresholds = vol_thresholds\n",
+    "        self.horizons = horizons\n",
+    "        self.betas = betas\n",
+    "        self.periods = periods\n",
+    "\n",
+    "    def labelling_ATR(self, df, horizon, beta, period):\n",
+    "        atr = calculate_atr(self.data, period)\n",
+    "        uper_barrier = df.high + beta*atr\n",
+    "        lower_barrier = df.low - beta*atr\n",
+    "\n",
+    "        labels = list()\n",
+    "        labeled_data = df.copy()\n",
+    "\n",
+    "        \n",
+    "        for i in range(len(df)-horizon):\n",
+    "\n",
+    "            series = df[i:i+horizon]\n",
+    "            pre_labels =  np.where(series.high >= uper_barrier.iloc[i], 1,\n",
+    "                           (np.where(series.low <= lower_barrier.iloc[i], -1, 0)))\n",
+    "        \n",
+    "        # Si hay alguna etiqueta distinta de 0,\n",
+    "        # quiero la primera en suceder.\n",
+    "            if any(pre_labels != 0):\n",
+    "                labels.append(pre_labels[pre_labels != 0][0])\n",
+    "            else:\n",
+    "                labels.append(0)\n",
+    "        labeled_data.drop(labeled_data.index[-horizon:],axis=0, inplace=True) # Pierdo los ultimos \"length\" datos\n",
+    "        labeled_data[\"labels\"] = np.array(labels)    \n",
+    "\n",
+    "        return labeled_data\n",
+    "    \n",
+    "    def labelling_volat(self, df, horizon, beta, period):\n",
+    "        volat = df.close.pct_change()\n",
+    "        volat = volat.rolling(period).std()\n",
+    "        uper_barrier = df.high * (1+beta*volat)\n",
+    "        lower_barrier = df.low - (1+beta*volat)\n",
+    "        \n",
+    "        labels = list()\n",
+    "        labeled_data = df.copy()\n",
+    "\n",
+    "        for i in range(len(df)-horizon):\n",
+    "            \n",
+    "            series = df[i:i+horizon]\n",
+    "            pre_labels =  np.where(series.high >= uper_barrier.iloc[i], 1,\n",
+    "                           (np.where(series.low <= lower_barrier.iloc[i], -1, 0)))\n",
+    "        # Si hay alguna etiqueta distinta de 0,\n",
+    "        # quiero la primera en suceder.\n",
+    "            if any(pre_labels != 0):\n",
+    "                labels.append(pre_labels[pre_labels != 0][0])\n",
+    "            else:\n",
+    "                labels.append(0)\n",
+    "        labeled_data.drop(labeled_data.index[-horizon:],axis=0, inplace=True) # Pierdo los ultimos \"length\" datos\n",
+    "        labeled_data[\"labels\"] = np.array(labels)    \n",
+    "\n",
+    "        return labeled_data\n",
+    "    \n",
+    "\n",
+    "    def run_labeler(self):\n",
+    "        output = dict()\n",
+    "        for i in self.vol_thresholds:\n",
+    "            df = generate_volumebars(self.data, i)\n",
+    "\n",
+    "            ### ACA HAY QUE LLAMAR FUNCION QUE AGREGA LOS FEATURES\n",
+    "\n",
+    "            for h in self.horizons:\n",
+    "                for b in self.betas:\n",
+    "                    for p in self.periods:\n",
+    "                        labels_atr = self.labelling_ATR(df, h, b, p)\n",
+    "                        output[f\"v_{i}, h_{h}, b_{b}, p_{p}, ATR\"] = labels_atr\n",
+    "                        labels_volat = self.labelling_volat(df, h, b, p)\n",
+    "                        output[f\"v_{i}, h_{h}, b_{b}, p_{p}, volat\"] = labels_volat\n",
+    "        \n",
+    "        return output"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lab = labeler(data, [5000, 10000], [50, 100], [1, 1.5], [14, 50])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dicc = lab.run_labeler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9411\n",
+      "9411\n",
+      "9411\n",
+      "9411\n",
+      "9411\n",
+      "9411\n",
+      "9411\n",
+      "9411\n",
+      "9361\n",
+      "9361\n",
+      "9361\n",
+      "9361\n",
+      "9361\n",
+      "9361\n",
+      "9361\n",
+      "9361\n",
+      "4879\n",
+      "4879\n",
+      "4879\n",
+      "4879\n",
+      "4879\n",
+      "4879\n",
+      "4879\n",
+      "4879\n",
+      "4829\n",
+      "4829\n",
+      "4829\n",
+      "4829\n",
+      "4829\n",
+      "4829\n",
+      "4829\n",
+      "4829\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in dicc.values():\n",
+    "    print(len(i))"
+   ]
   },
   {
    "cell_type": "code",
